# web-rest-rocket

./: .env  Cargo.toml  README.md  Rocket.toml
src/: database.rs  main.rs
src/controllers/: mod.rs  post.rs  response.rs
src/repositories/: error.rs  mod.rs  post.rs
src/services/: error.rs  mod.rs  post.rs
src/utils/: error.rs
