[package]
name = "web-rest-rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0-rc.1", features = ["diesel_postgres_pool"] }
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
rocket_okapi = { version = "0.8.0-alpha-1", features = ["swagger", "rapidoc"] }
#[dependencies.rocket_sync_db_pools]
#version = "0.1.0-rc.1"
#features = ["diesel_sqlite_pool"]